--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <body>
     <h1>ODIN RECIPES</h1>
 
+    <ul>
+        <li>
+            <a href="./recipes/noodles.html">noodles</a>
+        </li>
+    </ul>
+
 </body>
 </html>
 
